--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -1,43 +1,44 @@
 <div class="container" id="cont">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img [src]="defaultPicture" class="d-block w-100" alt="picture">
+    <div id="main-div-container">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img [src]="defaultPicture" class="d-block w-100" alt="picture">
+                </div>
+                <div class="carousel-item" *ngFor="let image of images">
+                    <img src="{{image}}" class="d-block w-100" alt="picture" id="main-img"
+                         (click)="changeDefaultImg(image)">
+                </div>
             </div>
-            <div class="carousel-item" *ngFor="let image of images">
-                <img src="{{image}}" class="d-block w-100" alt="picture" id="main-img"
-                     (click)="changeDefaultImg(image)">
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div id="img-holder-row">
+            <div *ngFor="let image of images" id="img-bonder">
+                <img [src]="image" class="small-img" alt="picture" (click)="changeDefaultImg(image)">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
-    <div id="img-holder-row">
-        <div *ngFor="let image of images" id="img-bonder">
-            <img [src]="image" class="small-img" alt="picture" (click)="changeDefaultImg(image)">
-        </div>
-    </div>
-
     <div>
-    <h3><strong>Ingatlan bemutatása</strong></h3>
+        <h3><strong>Ingatlan bemutatása</strong></h3>
 
-    <div class="row" id="description-div">
-        <div class="col">
-            <strong>Ingatlan:</strong> {{propertyDetails?.name + " "}}
+        <div class="row" id="description-div">
+            <div class="col">
+                <strong>Ingatlan:</strong> {{propertyDetails?.name + " "}}
+            </div>
+            <div class="col">
+                <strong>Szobák száma:</strong> {{propertyDetails?.numberOfRooms}}
+            </div>
+            <div class="col">
+                <strong>Ár:</strong> {{propertyDetails?.price}}
+            </div>
         </div>
-        <div class="col">
-            <strong>Szobák száma:</strong> {{propertyDetails?.numberOfRooms}}
-        </div>
-        <div class="col">
-            <strong>Ár:</strong> {{propertyDetails?.price}}
-        </div>
-    </div>
     </div>
     <p></p>
     <p><strong>Részletes leírás:</strong></p>
