--- a/moovsmart/src/app/components/property-form/property-form.component.html
+++ b/moovsmart/src/app/components/property-form/property-form.component.html
@@ -1,5 +1,5 @@
 <div class="container jumbotron">
-  <h2>Új ingatlan regisztrálása</h2>
+  <h2>Új ingatlan regisztrálása <i class="fas fa-home"></i></h2>
   <hr/>
   <form (ngSubmit)="submit()" [formGroup]="propertyForm">
     <div class="form-group">
