--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="container jumbotron">
-    <h2>Regisztráció</h2>
+    <h2>Regisztráció <i class="fas fa-user-edit"></i></h2>
     <hr/>
     <form (ngSubmit)="onSubmit()" [formGroup]="registrationForm">
         <div class="form-group">
