--- a/moovsmart/src/app/components/signin/signin.component.html
+++ b/moovsmart/src/app/components/signin/signin.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h2>Bejelentkezés</h2>
+<div class="container jumbotron">
+    <h2>Bejelentkezés <i class="far fa-arrow-alt-circle-right"></i></h2>
     <hr/>
     <form (ngSubmit)="onSubmit()" [formGroup]="signInForm">
         <div class="form-group">
