--- a/moovsmart/src/app/components/welcome/welcome.component.css
+++ b/moovsmart/src/app/components/welcome/welcome.component.css
@@ -1,17 +1,41 @@
 .container {
+    padding: 0px;
+
+}
+#main-div-container{
+    background-color:#ECF0F3;
+}
+#img-text{
+    position: absolute;
+    left: 10%;
+    bottom: 2%;
 }
 
-#main-img-holder{
+#link-paragraph{
     text-align: center;
+}
+#main-img-holder {
+    text-align: center;
+    position: relative;
+    background-color:#ECF0F3;
+}
+
+h3 {
+    position: absolute;
+    top: 20px;
+    left: 30%;
+    right: auto;
 }
 
 #main-img {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
+    opacity: 0.2;
 }
 
-#link-holder{
+#link-holder {
     text-align: center;
+    background-color:#ECF0F3;
 }
 
 #left-img-holder {
@@ -32,14 +56,21 @@
     display: inline-block;
     max-width: 45%;
 }
-.img-link-surfing{
+
+.img-link-surfing {
     max-height: 200px;
     max-width: 90%;
 }
 
-a{
+a {
     color: #7E685A;
 }
-a:hover{
+
+a:hover {
     color: magenta;
+}
+hr{
+    max-width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
