security working, method are cheched by Security

--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -15,6 +15,7 @@
 
       <a class="nav-link" routerLink="/registration">Regisztráció <i class="far fa-edit"></i></a>
       <a class="nav-link" routerLink="/signin">Bejelentkezés <i class="fas fa-sign-in-alt"></i></a>
+      <a class="nav-link" (click)="logout()">Logout</a>
     </div>
   </div>
 </nav>
