--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -1,4 +1,15 @@
 <div class="container">
+    <table class="table table-bordered">
+        <thead>
+
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
+
+<div class="container">
     <div *ngIf="propertyListItemModels === undefined || propertyListItemModels.length === 0" id="emptydb">
         <img
             src="https://previews.123rf.com/images/tcareob72/tcareob721801/tcareob72180100003/94128283-beautiful-atmosphere-empty-field-in-thailand-.jpg"
